--- a/src/webapp/WEB-INF/pages/addUser.html
+++ b/src/webapp/WEB-INF/pages/addUser.html
@@ -11,7 +11,7 @@
     <input type="text" th:field="*{name}" id="name"/>
     <br/>
     <label for="surname">Enter surname: </label>
-    <input type="text" th:field="*{sureName}" id="surname"/>
+    <input type="text" th:field="*{surname}" id="surname"/>
     <br/>
     <input type="submit" value="OK"/>
 </form>
