--- a/src/webapp/WEB-INF/pages/addUser.html
+++ b/src/webapp/WEB-INF/pages/addUser.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -18,3 +17,4 @@
 </form>
 </body>
 </html>
+
