Исправил добавление нового юзера. Исправил удаление существующего юзера. Обновление существующего юзера не работает.

--- a/src/webapp/WEB-INF/pages/addUser.html
+++ b/src/webapp/WEB-INF/pages/addUser.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form th:method="post" th:action="@{/updateUser}" th:object="${user}">
+<form th:method="post" th:action="@{/addUser}" th:object="${user}">
     <input type="hidden" th:field="*{id}"/>
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
