--- a/src/webapp/WEB-INF/pages/addUser.html
+++ b/src/webapp/WEB-INF/pages/addUser.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add User</title>
 </head>
 <body>
 <form th:method="post" th:action="@{/addUser}" th:object="${user}">
@@ -17,4 +16,3 @@
 </form>
 </body>
 </html>
-
